# mayhem-firmware

./: .clang-format  .dockerignore.backup  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  LICENSE.md  README.md  SECURITY.md  cmake_install.cmake  conflicts.txt  corrected_cppcheck_analysis.xml  cppcheck_checkers.txt  cppcheck_drone_analysis_output.xml  cppcheck_drone_analyzer.xml  cppcheck_drone_analyzer_output.txt  cppcheck_drone_analyzer_output.xml  cppcheck_eda.xml  cppcheck_eda_output.txt  cppcheck_eda_refactor.xml  cppcheck_eda_retry.xml  cppcheck_enhanced_drone_analyzer.xml  cppcheck_enhanced_drone_analyzer_analysis.xml  cppcheck_enhanced_drone_analyzer_build.xml  cppcheck_enhanced_drone_analyzer_comprehensive.xml  cppcheck_enhanced_drone_analyzer_final.xml  cppcheck_enhanced_drone_analyzer_local.xml  cppcheck_enhanced_drone_analyzer_v2.xml  cppcheck_enhanced_drone_analyzer_v3.xml  cppcheck_full_project.xml  cppcheck_new.txt  cppcheck_report.xml  cppcheck_settings_dead_code.xml  cppcheck_settings_focus.xml  (+27 more)
firmware/: .clang-format  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hackrf_cpld_default.svf  hackrf_cpld_portapack.svf  hackrf_one_usb.dfu  hackrf_one_usb_ram.dfu  toolchain-arm-cortex-m.cmake
firmware/application/: CMakeLists.txt  CTestTestfile.cmake  Makefile  adsb.cpp  adsb.hpp  afsk.cpp  afsk.hpp  ais_app.cpp  ais_app.hpp  ais_packet.cpp  ais_packet.hpp  analog_audio_app.cpp  analog_audio_app.hpp  app_ais.cpp  app_ais.hpp  app_analog_audio.cpp  app_analog_audio.hpp  app_ert.cpp  app_ert.hpp  app_settings.cpp  app_settings.hpp  app_spectrum_analysis.cpp  app_spectrum_analysis.hpp  app_tpms.cpp  app_tpms.hpp  audio.cpp  audio.hpp  audio_thread.cpp  audio_thread.hpp  baseband_api.cpp  baseband_api.hpp  baseband_cpld.cpp  baseband_cpld.hpp  bht.cpp  bht.hpp  binder.hpp  bitmap.hpp  bulb_ignore_bmp.hpp  capture_app.cpp  capture_app.hpp  (+336 more)
firmware/application/apps/: acars_app.cpp  acars_app.hpp  ais_app.cpp  ais_app.hpp  analog_audio_app.cpp  analog_audio_app.hpp  analog_tv_app.cpp  analog_tv_app.hpp  ble_app.cpp  ble_app.hpp  ble_comm_app.cpp  ble_comm_app.hpp  ble_rx_app.cpp  ble_rx_app.hpp  ble_tx_app.cpp  ble_tx_app.hpp  capture_app.cpp  capture_app.hpp  dump1090.hpp  ert_app.cpp  ert_app.hpp  gps_sim_app.cpp  gps_sim_app.hpp  lge_app.cpp  lge_app.hpp  pocsag_app.cpp  pocsag_app.hpp  replay_app.cpp  replay_app.hpp  soundboard_app.cpp  (+163 more)
firmware/baseband/: CMakeLists.txt  CTestTestfile.cmake  Makefile  access_code_correlator.cpp  access_code_correlator.hpp  audio_compressor.cpp  audio_compressor.hpp  audio_dma.cpp  audio_dma.hpp  audio_input.cpp  audio_input.hpp  audio_output.cpp  audio_output.hpp  audio_stats_collector.cpp  audio_stats_collector.hpp  baseband.cpp  baseband_ads.img  baseband_closecall.img  baseband_dma.cpp  baseband_dma.hpp  baseband_processor.cpp  baseband_processor.hpp  baseband_stats_collector.cpp  baseband_stats_collector.hpp  baseband_thread.cpp  baseband_thread.hpp  baseband_tones.img  block_decimator.hpp  channel_decimator.cpp  channel_decimator.hpp  channel_stats_collector.hpp  chconf.h  clock_recovery.cpp  clock_recovery.hpp  cmake_install.cmake  debug.cpp  debug.hpp  description  dsp_decimate.cpp  dsp_decimate.hpp  (+165 more)
firmware/baseband-test/: CMakeLists.txt  dsp_fft_test.cpp
firmware/baseband-tx/: Makefile  audio_dma.cpp  audio_output.cpp  audio_output.hpp  audio_stats_collector.cpp  audio_stats_collector.hpp  baseband_dma.cpp  baseband_processor.cpp  baseband_processor.hpp  baseband_stats_collector.hpp  baseband_thread.cpp  baseband_thread.hpp  channel_decimator.cpp  chconf.h  clock_recovery.cpp  description  dsp_demodulate.cpp  dsp_iir.cpp  dsp_squelch.cpp  event_m4.hpp  fxpt_atan2.cpp  irq_ipc_m4.hpp  main.cpp  main.cpp.orig  matched_filter.cpp  mcuconf.h  name  ook.hpp  packet_builder.hpp  phase_accumulator.hpp  proc_audiotx.cpp  proc_audiotx.hpp  proc_epar.cpp  proc_epar.hpp  proc_fsk_lcr.cpp  proc_fsk_lcr.hpp  proc_jammer.cpp  proc_jammer.hpp  proc_playaudio.cpp  proc_playaudio.hpp  (+11 more)
firmware/bootstrap/: CMakeLists.txt  Makefile  bootstrap.c  hackrf_one_usb_ram.dfu  m4.ld  startup_ARMCM4.S
firmware/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/chibios/: .project  documentation.html  exception.txt  readme.txt
firmware/common/: acars_packet.cpp  acars_packet.hpp  adc.hpp  ads1100.cpp  ads1100.hpp  ads1110.cpp  ads1110.hpp  adsb.cpp  adsb.hpp  adsb_frame.cpp  adsb_frame.hpp  ais_baseband.cpp  ais_baseband.hpp  ais_packet.cpp  ais_packet.hpp  ak4951.cpp  ak4951.hpp  aprs_packet.cpp  aprs_packet.hpp  audio.hpp  backlight.cpp  backlight.hpp  baseband.hpp  baseband_ais.hpp  baseband_cpld.cpp  baseband_cpld.hpp  baseband_packet.hpp  baseband_sgpio.cpp  baseband_sgpio.hpp  battery.cpp  battery.hpp  bch_code.cpp  bch_code.hpp  bit_pattern.hpp  bmp.hpp  bmpfile.cpp  bmpfile.hpp  buffer.cpp  buffer.hpp  buffer_exchange.cpp  (+190 more)
firmware/graphics/: icon_audiotx.png_unused  icon_keyboard.png_unused  icon_unistroke.png_unused
firmware/standalone/: CMakeLists.txt
firmware/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/tools/: adsb_db.py  adsb_map.py  airlines.csv.txt  airlines.csv.txtZone.Identifier  bitmap_arr_reverse_decode.py  bmp_to_hex_cpp_arr.py  check_bitmap_usage.sh  check_external_app_linker_script_correct.py  check_for_shared_external_code.py  check_gcc_version_from_elf.py  convert_C16_to_complex.grc  copy_external_apps.sh  docker-entrypoint.sh  enter_mode.sh  export_external_apps.py  external_app_info.py  extract_cpld_data.py  extract_svf_data_xc2c64a.py  fast_flash_pp_and_copy_apps.py  fir_lpf.py  generate_airlines.db.py  generate_custom_splash.py  generate_ui-about-simple.ccp.py  generate_ui-about-simple.cpp.py  generate_world_map.bin.py  make_baseband_file.py  make_bitmap.py  make_dcs.py  make_image_chunk.py  make_spi_image.py  patch_external_app.py  simple_checksum.py  splash_new.h  splash_new_new_t.h  strip_dfu.py  widget_preview.py  world_map.py
(+2576 files in other folders)
